--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "yarn lint:js",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxt/http": "latest",
+    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "axios": "^0.21.1",
+    "axios-extensions": "^3.1.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "1.19.0",
+    "cheerio": "^1.0.0-rc.5",
+    "cookie-parser": "^1.4.4",
+    "cookie-universal-nuxt": "^2.1.3",
+    "cors": "^2.8.5",
+    "cross-env": "5.2.1",
     "express": "latest",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "node-sass": "^5.0.0",
     "nuxt": "latest"
   },
   "devDependencies": {
-    "@nuxtjs/eslint-config": "^5.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.20.0",
-    "eslint-plugin-nuxt": "^2.0.0"
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1"
   }
 }
