--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/http": "latest",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@nuxtjs/svg-sprite": "^0.5.2",
     "axios": "^0.21.1",
     "axios-extensions": "^3.1.3",
     "bcryptjs": "^2.4.3",
